# Qt-Creator-MCP-Plugin

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists_original.txt  CMakeLists_temp.txt  Qt MCP Plugin.json.in  Qt_MCP_Plugin.json  Qt_MCP_Plugin.json.in  Qt_MCP_Plugin_v1_1.json.in  Qt_MCP_Plugin_v1_10.json.in  Qt_MCP_Plugin_v1_4.json.in  Qt_MCP_Plugin_v1_5.json.in  Qt_MCP_Plugin_v1_6.json.in  Qt_MCP_Plugin_v1_7.json.in  Qt_MCP_Plugin_v1_8.json.in  Qt_MCP_Plugin_v1_9.json.in  README.md  cmake_install.cmake  issuesmanager.cpp  issuesmanager.h  launch_qtcreator_with_plugin.bat  launch_qtcreator_with_plugin.sh  mcpcommands.cpp  mcpcommands.h  mcpserver.cpp  mcpserver.h  qt_mcp_plugin.cpp  qt_mcp_pluginconstants.h  qt_mcp_plugintr.h  version.cmake  version.h
.github/workflows/: build_cmake.yml
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
Qt_MCP_Plugin_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
Qt_MCP_Plugin_autogen/EWIEGA46WW/: moc_issuesmanager.cpp.d  moc_mcpcommands.cpp.d  moc_mcpserver.cpp.d
Qt_MCP_Plugin_autogen/include/: qt_mcp_plugin.moc.d
